chore(token): change get to post
